--- a/ClassLibrary1/CentralLib.csproj
+++ b/ClassLibrary1/CentralLib.csproj
@@ -40,14 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="absExchange.cs" />
     <Compile Include="Enum.cs" />
     <Compile Include="ConnectionFP.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="DeafaultPortCom.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Provision.cs" />
+    <Compile Include="Protocols.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
