--- a/SyncHameleon/Properties/Settings.settings
+++ b/SyncHameleon/Properties/Settings.settings
@@ -5,9 +5,9 @@
     <Setting Name="Npgsql" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Host=chm.space.digma;Username=chameleon;Password=chameleon;Database=chameleonserver&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Host=chm.space.digma;Username=chameleon;Password=chameleon;Database=chameleonserver;CommandTimeout=240;Timeout=240;&lt;/ConnectionString&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Host=chm.space.digma;Username=chameleon;Password=chameleon;Database=chameleonserver</Value>
+      <Value Profile="(Default)">Host=chm.space.digma;Username=chameleon;Password=chameleon;Database=chameleonserver;CommandTimeout=240;Timeout=240;</Value>
     </Setting>
     <Setting Name="TimerIntervalSec" Type="System.UInt32" Scope="Application">
       <Value Profile="(Default)">3</Value>
