--- a/SyncHameleon/Properties/Settings.settings
+++ b/SyncHameleon/Properties/Settings.settings
@@ -12,5 +12,21 @@
     <Setting Name="TimerIntervalSec" Type="System.UInt32" Scope="Application">
       <Value Profile="(Default)">3</Value>
     </Setting>
+    <Setting Name="FOCUSA" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=FOCUS-A;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=FOCUS-A;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82</Value>
+    </Setting>
+    <Setting Name="FPWorkConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=focus-a;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=focus-a;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
