--- a/SyncHameleon/packages.config
+++ b/SyncHameleon/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
+  <package id="linq2db" version="1.0.7.1" targetFramework="net452" />
+  <package id="linq2db.PostgreSQL" version="1.0.7.3" targetFramework="net452" />
+  <package id="linq2db.t4models" version="1.0.7.1" targetFramework="net452" />
   <package id="NBug" version="1.2.2" targetFramework="net452" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net452" />
   <package id="NLog" version="4.2.3" targetFramework="net452" />
