--- a/SyncHameleon/SyncHameleon.csproj
+++ b/SyncHameleon/SyncHameleon.csproj
@@ -92,13 +92,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataClassesFocusA.dbml</DependentUpon>
     </Compile>
+    <Compile Include="DBHelper\Checks.cs" />
     <Compile Include="DBHelper\Postrgres.cs" />
-    <Compile Include="DBHelper\tbl_ART.cs" />
-    <Compile Include="DBHelper\tbl_Cashiers.cs" />
-    <Compile Include="DBHelper\tbl_CashIO.cs" />
-    <Compile Include="DBHelper\tbl_Operations.cs" />
-    <Compile Include="DBHelper\tbl_Payment.cs" />
-    <Compile Include="DBHelper\tbl_Sales.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
