--- a/PrintFP/PrintFP.csproj
+++ b/PrintFP/PrintFP.csproj
@@ -79,6 +79,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataClassesFocusA.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Primary\CloseZ.cs" />
+    <Compile Include="Primary\StopWork.cs" />
+    <Compile Include="Primary\Init.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
