--- a/PrintFP/Properties/Settings.settings
+++ b/PrintFP/Properties/Settings.settings
@@ -10,5 +10,8 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=FpWork;Integrated Security=True;Connect Timeout=30</Value>
     </Setting>
+    <Setting Name="TimerIntervalSec" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">2</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
