--- a/ClassLibrary1/CentralLib.csproj
+++ b/ClassLibrary1/CentralLib.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{ABAC24C1-E800-4F1C-A77C-C5A4E17A1468}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClassLibrary1</RootNamespace>
-    <AssemblyName>ClassLibrary1</AssemblyName>
+    <RootNamespace>CentralLib</RootNamespace>
+    <AssemblyName>CentralLib</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -56,14 +56,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enum.cs" />
-    <Compile Include="ConnectionFP.cs">
+    <Compile Include="Connections\ConnectFactory.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="DeafaultPortCom.cs" />
+    <Compile Include="Connections\ConnectFP_EP06.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Connections\ConnectFP_EP11.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Helper\Enum.cs" />
+    <Compile Include="Connections\ConnectionFP.cs" />
+    <Compile Include="Connections\DeafaultPortCom.cs" />
+    <Compile Include="Helper\BitHelper.cs" />
+    <Compile Include="Helper\ByteHelper.cs" />
+    <Compile Include="Connections\InterfaceConnectFactory.cs" />
+    <Compile Include="Helper\IBitHelper.cs" />
+    <Compile Include="Helper\IByteHelper.cs" />
+    <Compile Include="Protocols\BaseProtocol.cs" />
+    <Compile Include="Protocols\Protocol_EP06.cs" />
+    <Compile Include="Protocols\SingletonProtocol.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Protocols.cs" />
-    <Compile Include="Struct.cs" />
+    <Compile Include="Protocols\IProtocols.cs" />
+    <Compile Include="Protocols\Protocol_EP11.cs" />
+    <Compile Include="Protocols\Struct.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
