--- a/ClassLibrary1/CentralLib.csproj
+++ b/ClassLibrary1/CentralLib.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Helper\IByteHelper.cs" />
     <Compile Include="Protocols\BaseProtocol.cs" />
     <Compile Include="Protocols\Protocol_EP06.cs" />
+    <Compile Include="Protocols\Protocol_OP02.cs" />
     <Compile Include="Protocols\SingletonProtocol.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocols\IProtocols.cs" />
