--- a/PrintFP/Properties/Settings.settings
+++ b/PrintFP/Properties/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="FpWorkConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=FpWork;Integrated Security=True;Connect Timeout=30&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=focus-a;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=FpWork;Integrated Security=True;Connect Timeout=30</Value>
+      <Value Profile="(Default)">Data Source=focus-a;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82</Value>
     </Setting>
     <Setting Name="TimerIntervalSec" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">2</Value>
