--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,7 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+*.exe
+PrintFP/bin/Debug/PrintFP.pdb
+*.pdb
+.vs/FocusA/v14/.suo
