--- a/TestComm/packages.config
+++ b/TestComm/packages.config
@@ -3,5 +3,7 @@
   <package id="NBug" version="1.2.2" targetFramework="net452" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net452" />
   <package id="NLog" version="4.2.3" targetFramework="net452" />
+  <package id="NLog.Config" version="4.2.3" targetFramework="net452" />
+  <package id="NLog.Schema" version="4.0.0" targetFramework="net452" />
   <package id="Npgsql" version="3.0.5" targetFramework="net452" />
 </packages>
