--- a/SyncOpenStore/SyncOpenStore.csproj
+++ b/SyncOpenStore/SyncOpenStore.csproj
@@ -95,6 +95,10 @@
     </None>
     <Content Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="dbNlog.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
