--- a/TestComm/App.config
+++ b/TestComm/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="TestComm.Properties.Settings.FPWorkConnectionString"
+            connectionString="Data Source=focus-a;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
