--- a/SyncHameleon/NLog.config
+++ b/SyncHameleon/NLog.config
@@ -60,7 +60,7 @@
     Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"-->
     <logger name="*" minlevel="Debug" writeTo="db" />
     <logger name="*" minlevel="Error" writeTo="f" />
-    <logger name="*" minlevel="Trace" writeTo="console" />
+    <logger name="*" minlevel="Error" writeTo="console" />
     
   </rules>
 </nlog>
