--- a/PrintFP/NLog.config
+++ b/PrintFP/NLog.config
@@ -10,8 +10,7 @@
   <!-- optional, add some variabeles
   https://github.com/nlog/NLog/wiki/Configuration-file#variables
   -->
-  <variable name="logDirectory" value="${basedir}/logs/${shortdate}"/>
-  <variable name="fpnumber" value="123"/>
+  <variable name="myvar" value="myvalue"/>
 
   <!-- 
   See https://github.com/nlog/nlog/wiki/Configuration-file 
@@ -30,9 +29,6 @@
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${message}" />
     -->
-    <target name="console" xsi:type="ColoredConsole" layout="${date:format=HH\:mm\:ss.fff} ${gdc:FPNumber} ${logger} ${message}">
-    </target>
-    
   </targets>
 
   <rules>
@@ -42,8 +38,5 @@
     Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
     <logger name="*" minlevel="Debug" writeTo="f" />
     -->
-    <!--<logger name="*" minlevel="Debug" writeTo="db" />
-    <logger name="*" minlevel="Error" writeTo="f" />-->
-    <logger name="*" minlevel="Trace" writeTo="console" />
   </rules>
 </nlog>
