--- a/SyncHameleon/packages.config
+++ b/SyncHameleon/packages.config
@@ -1,18 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package id="linq2db" version="1.0.7.3" targetFramework="net452" />
-  <package id="linq2db.PostgreSQL" version="1.0.7.3" targetFramework="net452" />
-  <package id="linq2db.t4models" version="1.0.7.3" targetFramework="net452" />
-  <package id="NBug" version="1.2.2" targetFramework="net452" />
-  <package id="NDesk.Options" version="0.2.1" targetFramework="net452" />
-  <package id="NLog" version="4.2.3" targetFramework="net452" />
-  <package id="NLog.Config" version="4.2.3" targetFramework="net452" />
-  <package id="NLog.Schema" version="4.2.3" targetFramework="net452" />
-  <package id="Npgsql" version="3.0.5" targetFramework="net452" />
-  <package id="StopWatch" version="1.0.6" targetFramework="net452" />
-  <package id="System.Data.SQLite" version="1.0.99.0" targetFramework="net452" />
-  <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net452" />
-  <package id="System.Data.SQLite.EF6" version="1.0.99.0" targetFramework="net452" />
-  <package id="System.Data.SQLite.Linq" version="1.0.99.0" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="linq2db" version="1.0.7.3" targetFramework="net461" />
+  <package id="linq2db.PostgreSQL" version="1.0.7.3" targetFramework="net461" />
+  <package id="linq2db.t4models" version="1.0.7.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="NBug" version="1.2.2" targetFramework="net461" />
+  <package id="NDesk.Options" version="0.2.1" targetFramework="net461" />
+  <package id="NLog" version="4.2.3" targetFramework="net461" />
+  <package id="NLog.Config" version="4.2.3" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.2.3" targetFramework="net461" />
+  <package id="Npgsql" version="3.0.5" targetFramework="net461" />
+  <package id="StopWatch" version="1.0.6" targetFramework="net461" />
+  <package id="System.Data.SQLite" version="1.0.99.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.99.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Linq" version="1.0.99.0" targetFramework="net461" />
 </packages>
