--- a/SyncOpenStore/NLog.config
+++ b/SyncOpenStore/NLog.config
@@ -10,36 +10,14 @@
   <!-- optional, add some variabeles
   https://github.com/nlog/NLog/wiki/Configuration-file#variables
   -->
-  <variable name="logDirectory" value="${basedir}/logs/${shortdate}"/>
-  <variable name="fpnumber" value="123"/>
+  <variable name="myvar" value="myvalue"/>
+
   <!-- 
   See https://github.com/nlog/nlog/wiki/Configuration-file 
   for information on customizing logging rules and outputs.
    -->
   <targets>
-    <target name="f" xsi:type="File" fileName="${shortdate}.log"/>
-    <target name="db" xsi:type="Database"
-         dbProvider="System.Data.SQLite" keepConnection="false"
-         connectionString="Data Source=${basedir}\dbNlog.db;Version=3;"
-         commandText="INSERT into Log(ServerName, SQLserver, FPNumber, Timestamp, DateTimeStamp, Loglevel, Logger, Callsite, Message,TimeSpan) 
-          values(@ServerName, @SQLserver, @FPNumber, @Timestamp, @DateTimeStamp, @Loglevel, @Logger, @Callsite, @Message,@TimeSpan)">
-      <parameter name="@ServerName" layout="${machinename}"/>
-      <parameter name="@SQLserver" layout="${gdc:SQLserver}"/>
-      <parameter name="@FPNumber" layout="${gdc:FPNumber}"/>
-      <parameter name="@Timestamp" layout="${longdate}"/>      
-      <parameter name="@DateTimeStamp" layout="${date:format=yyyyMMddHHmmss}"/>      
-      <parameter name="@Loglevel" layout="${level:uppercase=true}"/>
-      <parameter name="@Logger" layout="${logger}"/>
-      <parameter name="@Callsite" layout="${callsite:filename=true}"/>
-      <parameter name="@Message" layout="${message}"/>
-      <parameter name="@TimeSpan" layout="${gdc:TimeSpan}"/>
-    </target>
-    
-      <target name="console" xsi:type="ColoredConsole" layout="${date:format=HH\:mm\:ss.fff} ${gdc:SQLserver} ${gdc:FPNumber} ${logger} ${message}">
-      </target>
-    
-    
-    
+
     <!-- 
     add your targets here 
     See https://github.com/nlog/NLog/wiki/Targets for possible targets.
@@ -57,10 +35,8 @@
     <!-- add your logging rules here -->
 
     <!--
-    Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"-->
-    <logger name="*" minlevel="Debug" writeTo="db" />
-    <logger name="*" minlevel="Error" writeTo="f" />
-    <logger name="*" minlevel="Trace" writeTo="console" />
-    
+    Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
+    <logger name="*" minlevel="Debug" writeTo="f" />
+    -->
   </rules>
 </nlog>
