--- a/SyncOpenStore/app.config
+++ b/SyncOpenStore/app.config
@@ -1,20 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="SyncOpenStore.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="SyncOpenStore.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="SyncOpenStore.Properties.Settings.FPWorkConnectionString"
-            connectionString="Data Source=focus-a;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82"
-            providerName="System.Data.SqlClient" />
-        <add name="SyncOpenStore.Properties.Settings.CashDesk_OSConnectionString"
-            connectionString="Data Source=focus2;Initial Catalog=CashDesk_OS;User ID=sa;Password=1CGhtlghbznbt82"
-            providerName="System.Data.SqlClient" />
-        <add name="SyncOpenStore.Properties.Settings.ProcessingServerConnectionString"
-            connectionString="Data Source=OS_ROOT;Initial Catalog=ProcessingServer;User ID=sa;Password=1CGhtlghbznbt82"
-            providerName="System.Data.SqlClient" />
+        <add name="SyncOpenStore.Properties.Settings.FPWorkConnectionString" connectionString="Data Source=focus-a;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82" providerName="System.Data.SqlClient"/>
+        <add name="SyncOpenStore.Properties.Settings.CashDesk_OSConnectionString" connectionString="Data Source=focus2;Initial Catalog=CashDesk_OS;User ID=sa;Password=1CGhtlghbznbt82" providerName="System.Data.SqlClient"/>
+        <add name="SyncOpenStore.Properties.Settings.ProcessingServerConnectionString" connectionString="Data Source=OS_ROOT;Initial Catalog=ProcessingServer;User ID=sa;Password=1CGhtlghbznbt82" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <applicationSettings>
         <SyncOpenStore.Properties.Settings>
@@ -23,4 +17,4 @@
             </setting>
         </SyncOpenStore.Properties.Settings>
     </applicationSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
