--- a/PrintFP/NLog.config
+++ b/PrintFP/NLog.config
@@ -11,14 +11,33 @@
   https://github.com/nlog/NLog/wiki/Configuration-file#variables
   -->
   <variable name="logDirectory" value="${basedir}/logs/${shortdate}"/>
+  <variable name="SQLserver" value="SQLSERVER"/>
   <variable name="fpnumber" value="123"/>
+  <variable name="TimeSpan" value="0"/>
   <!-- 
   See https://github.com/nlog/nlog/wiki/Configuration-file 
   for information on customizing logging rules and outputs.
    -->
   <targets>
-    <target name="f" xsi:type="File" fileName="${gdc:FPNumber}_${shortdate}.log"/>
-    
+    <target name="f" xsi:type="File" fileName="${shortdate}.log"/>
+    <target name="db" xsi:type="Database"
+            
+         dbProvider="System.Data.SqlClient"
+         connectionString="Data Source=focus-a;Initial Catalog=FPWork;integrated security=True;"
+         commandText="INSERT into  tbl_Log( ServerName,  SQLserver,  FPNumber,  Timestamp,  DateTimeStamp,  Loglevel,  Logger,  Callsite,  Message,  TimeSpan) 
+                                    values(@ServerName, @SQLserver, @FPNumber, @Timestamp, @DateTimeStamp, @Loglevel, @Logger, @Callsite, @Message, @TimeSpan)">
+      <parameter name="@ServerName" layout="${machinename}"/>
+      <parameter name="@SQLserver" layout="${gdc:SQLserver}"/>
+      <parameter name="@FPNumber" layout="${gdc:FPNumber}"/>
+      <parameter name="@Timestamp" layout="${date}"/>
+      <parameter name="@DateTimeStamp" layout="${date:format=yyyyMMddHHmmss}"/>
+      <parameter name="@Loglevel" layout="${level:uppercase=true}"/>
+      <parameter name="@Logger" layout="${logger}"/>
+      <parameter name="@Callsite" layout="${callsite:filename=true}"/>
+      <parameter name="@Message" layout="${message}"/>
+      <parameter name="@TimeSpan" layout="${gdc:TimeSpan}"/>
+    </target>
+
     <target name="console" xsi:type="ColoredConsole" layout="${date:format=HH\:mm\:ss.fff} ${gdc:SQLserver} ${gdc:FPNumber} ${logger} ${message}">
     </target>
 
@@ -41,9 +60,9 @@
     <!-- add your logging rules here -->
 
     <!--
-    Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
-    <logger name="*" minlevel="Debug" writeTo="db" />-->
-    <logger name="*" minlevel="Info" writeTo="f" />
+    Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"-->
+    <logger name="*" minlevel="Trace" writeTo="db" />
+    <!--<logger name="*" minlevel="Error" writeTo="f" /> -->
     <logger name="*" minlevel="Trace" writeTo="console" />
 
   </rules>
