--- a/SyncHameleon/SyncHameleon.csproj
+++ b/SyncHameleon/SyncHameleon.csproj
@@ -184,7 +184,8 @@
     <Content Include="LinqToDB.Templates\CopyMe.PostgreSQL.tt.txt" />
     <Content Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
+      <SubType>
+      </SubType>
     </Content>
     <Content Include="dbNlog.db">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
