--- a/SyncOpenStore/SyncOpenStore.csproj
+++ b/SyncOpenStore/SyncOpenStore.csproj
@@ -96,7 +96,8 @@
     </None>
     <Content Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
+      <SubType>
+      </SubType>
     </Content>
     <Content Include="dbNlog.db">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
