--- a/SyncHameleon/NLog.config
+++ b/SyncHameleon/NLog.config
@@ -11,7 +11,9 @@
   https://github.com/nlog/NLog/wiki/Configuration-file#variables
   -->
   <variable name="logDirectory" value="${basedir}/logs/${shortdate}"/>
+  <variable name="SQLserver" value="SQLSERVER"/>
   <variable name="fpnumber" value="123"/>
+  <variable name="TimeSpan" value="0"/>
   <!-- 
   See https://github.com/nlog/nlog/wiki/Configuration-file 
   for information on customizing logging rules and outputs.
@@ -19,14 +21,15 @@
   <targets>
     <target name="f" xsi:type="File" fileName="${shortdate}.log"/>
     <target name="db" xsi:type="Database"
-         dbProvider="System.Data.SQLite" keepConnection="false"
-         connectionString="Data Source=${basedir}\dbNlog.db;Version=3;"
-         commandText="INSERT into Log(ServerName, SQLserver, FPNumber, Timestamp, DateTimeStamp, Loglevel, Logger, Callsite, Message,TimeSpan) 
-          values(@ServerName, @SQLserver, @FPNumber, @Timestamp, @DateTimeStamp, @Loglevel, @Logger, @Callsite, @Message,@TimeSpan)">
+            
+         dbProvider="System.Data.SqlClient"
+         connectionString="Data Source=focus-a;Initial Catalog=FPWork;integrated security=True;"
+         commandText="INSERT into  tbl_Log( ServerName,  SQLserver,  FPNumber,  Timestamp,  DateTimeStamp,  Loglevel,  Logger,  Callsite,  Message,  TimeSpan) 
+                                    values(@ServerName, @SQLserver, @FPNumber, @Timestamp, @DateTimeStamp, @Loglevel, @Logger, @Callsite, @Message, @TimeSpan)">
       <parameter name="@ServerName" layout="${machinename}"/>
       <parameter name="@SQLserver" layout="${gdc:SQLserver}"/>
       <parameter name="@FPNumber" layout="${gdc:FPNumber}"/>
-      <parameter name="@Timestamp" layout="${longdate}"/>
+      <parameter name="@Timestamp" layout="${date}"/>
       <parameter name="@DateTimeStamp" layout="${date:format=yyyyMMddHHmmss}"/>
       <parameter name="@Loglevel" layout="${level:uppercase=true}"/>
       <parameter name="@Logger" layout="${logger}"/>
@@ -58,8 +61,8 @@
 
     <!--
     Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"-->
-    <logger name="*" minlevel="Debug" writeTo="db" />
-    <logger name="*" minlevel="Error" writeTo="f" />
+    <logger name="*" minlevel="Trace" writeTo="db" />
+    <!--<logger name="*" minlevel="Error" writeTo="f" /> -->
     <logger name="*" minlevel="Trace" writeTo="console" />
 
   </rules>
