--- a/Tools/App.config
+++ b/Tools/App.config
@@ -1,13 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Tools.Properties.Settings.FPWorkConnectionString"
-            connectionString="Data Source=focus-a;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82"
-            providerName="System.Data.SqlClient" />
+        <add name="TestComm.Properties.Settings.FPWorkConnectionString" connectionString="Data Source=focus-a;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
 </configuration>
