--- a/Tools/Tools.csproj
+++ b/Tools/Tools.csproj
@@ -64,6 +64,9 @@
       <LastGenOutput>DataClassesFocusA.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
+    <Content Include="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
