--- a/ClassLibrary1/CentralLib.csproj
+++ b/ClassLibrary1/CentralLib.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Helper\IBitHelper.cs" />
     <Compile Include="Helper\IByteHelper.cs" />
     <Compile Include="Protocols\BaseProtocol.cs" />
+    <Compile Include="Protocols\MyExtensions.cs" />
     <Compile Include="Protocols\Protocol_EP06.cs" />
     <Compile Include="Protocols\Protocol_OP02.cs" />
     <Compile Include="Protocols\SingletonProtocol.cs" />
