--- a/SyncOpenStore/app.config
+++ b/SyncOpenStore/app.config
@@ -6,9 +6,15 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="SyncOpenStore.Properties.Settings.FPWorkConnectionString" connectionString="Data Source=focus-a;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82" providerName="System.Data.SqlClient"/>
-        <add name="SyncOpenStore.Properties.Settings.CashDesk_OSConnectionString" connectionString="Data Source=focus2;Initial Catalog=CashDesk_OS;User ID=sa;Password=1CGhtlghbznbt82" providerName="System.Data.SqlClient"/>
-        <add name="SyncOpenStore.Properties.Settings.ProcessingServerConnectionString" connectionString="Data Source=OS_ROOT;Initial Catalog=ProcessingServer;User ID=sa;Password=1CGhtlghbznbt82" providerName="System.Data.SqlClient"/>
+        <add name="SyncOpenStore.Properties.Settings.FPWorkConnectionString"
+            connectionString="Data Source=focus-a;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82"
+            providerName="System.Data.SqlClient" />
+        <add name="SyncOpenStore.Properties.Settings.CashDesk_OSConnectionString"
+            connectionString="Data Source=shar_kassa2;Initial Catalog=CashDesk_os;User ID=sa;Password=123456;Encrypt=False;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+        <add name="SyncOpenStore.Properties.Settings.ProcessingServerConnectionString"
+            connectionString="Data Source=OS_ROOT;Initial Catalog=ProcessingServer;User ID=sa;Password=1CGhtlghbznbt82"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <applicationSettings>
         <SyncOpenStore.Properties.Settings>
