--- a/SyncOpenStore/app.config
+++ b/SyncOpenStore/app.config
@@ -10,7 +10,7 @@
             connectionString="Data Source=focus-a;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82"
             providerName="System.Data.SqlClient" />
         <add name="SyncOpenStore.Properties.Settings.CashDesk_OSConnectionString"
-            connectionString="Data Source=shar_kassa2;Initial Catalog=CashDesk_os;User ID=sa;Password=123456;Encrypt=False;TrustServerCertificate=True"
+            connectionString="Data Source=shar2;Initial Catalog=CashDesk;User ID=sa;Password=123456;Encrypt=False;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
         <add name="SyncOpenStore.Properties.Settings.ProcessingServerConnectionString"
             connectionString="Data Source=OS_ROOT;Initial Catalog=ProcessingServer;User ID=sa;Password=1CGhtlghbznbt82"
@@ -19,7 +19,7 @@
     <applicationSettings>
         <SyncOpenStore.Properties.Settings>
             <setting name="TimerIntervalSec" serializeAs="String">
-                <value>15</value>
+                <value>30</value>
             </setting>
         </SyncOpenStore.Properties.Settings>
     </applicationSettings>
