repair erros& add new func

--- a/SyncOpenStore/SyncOpenStore.csproj
+++ b/SyncOpenStore/SyncOpenStore.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{DF8B6E74-6000-452D-A1C0-04330CD44120}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SyncOpenStore</RootNamespace>
     <AssemblyName>SyncOpenStore</AssemblyName>
