Доработка системы проверки серверов моксы на наличие. Добавление расчета количество ошибок После 5 система перестает работать с чеком Переделка try на запись данных

--- a/PrintFP/NLog.config
+++ b/PrintFP/NLog.config
@@ -23,7 +23,7 @@
     <target name="db" xsi:type="Database"
             
          dbProvider="System.Data.SqlClient"
-         connectionString="Data Source=focus-a;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82"
+         connectionString="Data Source=localhost;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82"
          commandText="INSERT into  tbl_Log( ServerName,  SQLserver,  FPNumber,  Timestamp,  DateTimeStamp,  Loglevel,  Logger,  Callsite,  Message,  TimeSpan) 
                                     values(@ServerName, @SQLserver, @FPNumber, @Timestamp, @DateTimeStamp, @Loglevel, @Logger, @Callsite, @Message, @TimeSpan)">
       <parameter name="@ServerName" layout="${machinename}"/>
