--- a/PrintFP/Properties/Settings.settings
+++ b/PrintFP/Properties/Settings.settings
@@ -2,14 +2,6 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="PrintFP.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="FpWorkConnectionString" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=focus-a;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82&lt;/ConnectionString&gt;
-  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=focus-a;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82</Value>
-    </Setting>
     <Setting Name="TimerIntervalSec" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">15</Value>
     </Setting>
@@ -18,6 +10,14 @@
     </Setting>
     <Setting Name="DateTimeEndReport" Type="System.DateTime" Scope="Application">
       <Value Profile="(Default)">2017-09-20</Value>
+    </Setting>
+    <Setting Name="FpWorkConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=localhost;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=localhost;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82</Value>
     </Setting>
   </Settings>
 </SettingsFile>
