add PerformanceCounter for test % Processor Time

--- a/PrintFP/App.config
+++ b/PrintFP/App.config
@@ -7,7 +7,7 @@
     </configSections>
     <connectionStrings>
         <add name="PrintFP.Properties.Settings.FpWorkConnectionString"
-            connectionString="Data Source=localhost;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82"
+            connectionString="Data Source=focus-a.space.digma;Initial Catalog=FPWork;User ID=sa;Password=1СПредприятие82"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
